kubernetes/apps/minecraft/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
