kubernetes/apps/minecraft/manifests/service-game.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
  namespace: minecraft
spec:
  type: ClusterIP
  ports:
    - name: game
      port: 25565
      targetPort: 25565
      protocol: TCP
  selector:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
