kubernetes/apps/minecraft/manifests/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-metrics
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
    expose: metrics
  namespace: minecraft
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9150
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
