kubernetes/apps/minecraft/manifests/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
spec:
  entryPoints:
    - minecraft
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: minecraft
          port: 25565
